--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "# Set up the OpenAI API key\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"  # Replace with your actual OpenAI API key\n"
+    "os.environ[\"OPENAI_API_KEY\"] = \""
    ]
   },
   {
