--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -199,8 +199,8 @@
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=500, chunk_overlap=100)\n",
     "doc_chunks = text_splitter.split_documents(documents)\n",
-    "for idx, text in enumerate(doc_chunks):\n",
-    "    text.metadata[\"id\"] = idx"
+    "for id, text in enumerate(doc_chunks):\n",
+    "    text.metadata[\"id\"] = id"
    ]
   },
   {
